--- a/index.html
+++ b/index.html
@@ -150,6 +150,14 @@
           </div>
         </div>
       </div>
+      <span id="github-link"
+        ><a
+          href="https://github.com/mariabvfernandes/my-weather-app"
+          target="blank"
+          >Open-source code</a
+        >
+        by Maria Fernandes</span
+      >
     </div>
     <script src="src/script.js"></script>
   </body>
