--- a/index.html
+++ b/index.html
@@ -71,80 +71,7 @@
             </div>
           </div>
           <hr />
-          <div class="row">
-            <div class="col-2 days">
-              Mon
-              <br />
-              <div class="maxMinTemp">
-                19ºC - 10ºC
-              </div>
-              <br />
-              <img
-                src="https://ssl.gstatic.com/onebox/weather/48/partly_cloudy.png"
-                alt="Weather condition image"
-              />
-            </div>
-            <div class="col-2 days">
-              Tue
-              <br />
-              <div class="maxMinTemp">
-                21ºC - 10ºC
-              </div>
-              <br />
-              <img
-                src="https://ssl.gstatic.com/onebox/weather/48/rain.png"
-                alt="Weather condition image"
-              />
-            </div>
-            <div class="col-2 days">
-              Wed
-              <br />
-              <div class="maxMinTemp">
-                21ºC - 11ºC
-              </div>
-              <br />
-              <img
-                src="https://ssl.gstatic.com/onebox/weather/48/cloudy.png"
-                alt="Weather condition image"
-              />
-            </div>
-            <div class="col-2 days">
-              Thu
-              <br />
-              <div class="maxMinTemp">
-                18ºC - 9ºC
-              </div>
-              <br />
-              <img
-                src="https://ssl.gstatic.com/onebox/weather/48/sunny.png"
-                alt="Weather condition image"
-              />
-            </div>
-            <div class="col-2 days">
-              Fri
-              <br />
-              <div class="maxMinTemp">
-                18ºC - 9ºC
-              </div>
-              <br />
-              <img
-                src="https://ssl.gstatic.com/onebox/weather/48/rain_light.png"
-                alt="Weather condition image"
-              />
-            </div>
-            <div class="col-2 days">
-              Sat
-              <br />
-              <div class="maxMinTemp">
-                20ºC - 10ºC
-              </div>
-              <br />
-              <img
-                src="https://ssl.gstatic.com/onebox/weather/48/rain_light.png"
-                alt="Weather condition image"
-              />
-            </div>
-          </div>
+          <div class="row weather-forecast" id="forecast"></div>
         </div>
         <small
           ><a
